--- a/frontend/user/product.html
+++ b/frontend/user/product.html
@@ -45,6 +45,27 @@
     align-items: center;
 
 }
+.cart-icon {
+            margin: 10px;
+            position: relative;
+            cursor: pointer;
+            color: black;
+            font-size: 24px;
+        }
+        .cart-count {
+            position: absolute;
+            top: -5px;
+            right: -10px;
+            background-color: red;
+            color: white;
+            font-size: 12px;
+            width: 18px;
+            height: 18px;
+            border-radius: 50%;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
 .filter-size {
 
 display: flex;
@@ -90,9 +111,10 @@ margin-left: 20px;
             <div class="social-container">
                 <!-- Search Icon -->
                 <i class="bi bi-search"></i>
-                <a id="cartIcon" href="./cart.html" style="color:black; display:block;">
-                    <i class="bi bi-cart"></i>
-                </a>
+                <div class="cart-icon" onclick="redirectToCart()">
+                    <i class="fas fa-shopping-cart"></i>
+                    <div class="cart-count" id="cartCount">0</div>
+                </div>
                                     <!-- Profile Icon -->
                 <a href="./frontend/login.html"><i  style="color: black;"   class="bi bi-person"></i></a>
             </div>
@@ -519,7 +541,8 @@ function createNoProductMessage() {
 
 
     </script>
-
+<link href="styles.css" rel="stylesheet">
+<script src="global.js"></script>
 </body>
 
 
